...
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_size"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:id="@+id/btnOk"
            android:text="Ok"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="right|bottom"/>

...
