<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scale"
        android:orderInCategory="1"
        android:title="@string/action_info_scale"
        android:icon="@drawable/ic_celsius"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_gmaps"
        android:orderInCategory="2"
        android:title="@string/action_show_map"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_list"
        android:orderInCategory="3"
        android:title="@string/action_show_list"
        android:icon="@drawable/ic_view_list_white_24dp"
        android:visible="false"
        app:showAsAction="always"/>

</menu>
