<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:name="com.google.android.gms.maps.SupportMapFragment">

    <FrameLayout
        android:id="@+id/mapFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Google Maps">

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabGoToLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default"
        design:fabSize="mini"
        android:src="@drawable/ic_my_location_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>